--- a/app/src/app/pages/puerto/puerto.component.html
+++ b/app/src/app/pages/puerto/puerto.component.html
@@ -1,1 +1,131 @@
-<p>puerto works!</p>
+<div class="container-fluid px-2">
+    <h1 class="mt-4">Puertos</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item"><a routerLink="dashboard">Dashboard</a></li>
+        <li class="breadcrumb-item active">Puertos</li>
+    </ol>
+
+      <div class="card mb-4">
+        <div class="card-header">
+          <i class="fas fa-table me-1"></i>
+         Formulario Registro
+      </div>
+        <div class="card-body">
+
+      <form
+      autocomplete="off" 
+      id="RolesForm"
+      >
+          <div class="row">
+            <div class="form-group col-md-3 col-lg-3">
+                <label for="inputGuia">Nombre</label>
+               
+            </div>
+
+          <div class="form-group col-md-3 col-lg-3">
+            <label for="SelectFormConductor">rut</label>
+           
+          </div>
+          
+          </div>
+         
+          <div class="row">
+          <div class="form-group col-md-3 col-lg-3">
+            <label for="SelectFormConductor">fono</label>
+          
+          </div>
+
+          <div class="form-group col-md-3 col-lg-3">
+            <label for="SelectFormConductor">email</label>
+          
+          </div>
+
+          
+          <div class="form-group col-md-3 col-lg-3">
+            <label for="SelectFormConductor">Giro</label>
+           
+          </div>
+
+          <div class="form-group col-md-3 col-lg-3">
+            <br>
+          <button *ngIf="ocultarRegistro" type="submit" class="btn btn-success" >Guardar</button>
+          <div  *ngIf="ocultarEditar">
+          <button  type="button"  class="btn btn-primary" >Editar</button>
+          &nbsp;
+          <button  type="button"  class="btn btn-danger">Cancelar</button>
+          </div>
+          </div>
+
+          </div>
+
+        </form>
+        
+      </div>
+    </div>
+      
+        <br>
+        <br>
+      
+      <div class="card mb-4">
+          <div class="card-header">
+              <i class="fas fa-table me-1"></i>
+             Proveedores
+          </div>
+          
+          <div class="card-body">
+              <br>
+            <table class="table table-bordered">
+                  <thead>
+                      <tr>
+                          <th  scope="col">Razon Social</th>
+                          <th  scope="col">rut</th>
+                          <th  scope="col">giro</th>
+                          <th  scope="col">fono</th>
+                          <th  scope="col">email</th>
+                          <th  scope="col">Acciones</th>
+                      </tr>
+                  </thead>
+                  
+                  <tbody>
+                      <tr >
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td>
+                            <div 
+                            class="btn-group" 
+                            role="group" aria-label="Button group with nested dropdown">
+
+                       
+                            <button 
+                          
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top"
+                            title="Editar"
+                            type="button" 
+                            class="btn btn-primary"
+                            ><i class="fa-solid fa-pen-to-square"></i></button>
+                            
+                            <button 
+                          
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top"
+                            title="Eliminar"
+                            type="button" 
+                            class="btn btn-danger"
+                            ><i class="fa-solid fa-eraser"></i></button>
+                          </div></td>
+                      </tr>
+
+                  </tbody>
+              </table>
+              <pagination-controls (pageChange)="p = $event"
+              previousLabel="Anterior"
+              nextLabel="Siguiente"></pagination-controls>
+              
+<br>
+          </div>
+      </div>
+  </div>
