--- a/app/src/app/pages/tarifa/tarifa.component.html
+++ b/app/src/app/pages/tarifa/tarifa.component.html
@@ -29,7 +29,7 @@
                  
             </div>
           
-            <div class="form-group col-md-3 col-lg-3">
+            <div class="form-group col-md-6 col-lg-6">
               <label>Descripcion</label>
               <input 
               type="text" 
@@ -39,7 +39,7 @@
               formControlName="descripcion">  
              </div>
 
-            <div class="form-group col-md-3 col-lg-3">
+            <div class="form-group col-md-2 col-lg-2">
               <label for="inputnave">Regla</label>
               <input 
               type="text" 
@@ -48,11 +48,22 @@
               formControlName="regla">
             </div>
 
+            
+            <div class="form-group col-md-2 col-lg-2">
+              <label for="SelectFormCliente">Codigo</label>
+              <select  class="form-select">
+                <option value="0">Seleccione Codigo</option>
+                <option value="INT">Interno</option>
+                <option value="INT_PS">Interno por peso</option>
+                <option value="EXT">Externo</option>
+              </select>
+            </div>
+
           </div>
          
           <div class="row">
 
-            <div class="form-group col-md-3 col-lg-3">
+            <div class="form-group col-md-2 col-lg-2">
               <label for="SelectFormConductor">Costo de la tarifa</label>
               <input 
               type="text" 
@@ -129,11 +140,11 @@
                           <td>{{item.nombre}}</td>
                           <td>{{item.descripcion}}</td>
                           <td>{{item.regla}}</td>
-                          <td>$ {{item.costo}}</td>
+                          <td>$ {{item.costo | number}}</td>
                           <td *ngIf="item.estado"><span class="badge rounded-pill bg-success">ACTIVADO</span></td>
                           <td *ngIf="!item.estado"><span class="badge rounded-pill bg-danger">DESACTIVADO</span></td>
-                          <td>$ {{item.valor_interno}}</td>
-                          <td>$ {{item.valor_externo}}</td>
+                          <td>$ {{item.valor_interno | number}}</td>
+                          <td>$ {{item.valor_externo | number}}</td>
                           <td>
                             <div 
                             class="btn-group" 
