--- a/app/src/app/pages/usuarios/usuarios.component.html
+++ b/app/src/app/pages/usuarios/usuarios.component.html
@@ -73,6 +73,24 @@
           </div>
 
           <div class="form-group col-md-3 col-lg-3">
+            <label for="SelectFormCliente">Confirmar Contraseña</label>
+            <input 
+            type="password" 
+            class="form-control" 
+            placeholder="Confirmar Clave usuario"
+            formControlName="cpassword">
+          </div>
+
+          <div class="form-group col-md-3 col-lg-3">
+            <label for="SelectFormCliente">Roles</label>
+            <select  class="form-select">
+              <option value="0">Seleccione Rol</option>
+             
+            </select>
+          </div>
+
+
+          <div class="form-group col-md-3 col-lg-3">
             <br>
           <button *ngIf="ocultarRegistro" type="submit" class="btn btn-success" >Guardar</button>
           <div *ngIf="ocultarEditar" >
