--- a/app/src/app/pages/cliente/cliente.component.html
+++ b/app/src/app/pages/cliente/cliente.component.html
@@ -57,20 +57,50 @@
           <div class="row">
 
             <div class="form-group col-md-3 col-lg-3">
-              <label for="SelectFormCliente">Region</label>
-              <select  class="form-select">
-                <option value="0">Seleccione Región</option>
-              </select>
-            </div>
-  
-            <div class="form-group col-md-3 col-lg-3">
-              <label for="SelectFormCliente">Comuna</label>
-              <select  class="form-select">
+                    <label for="exampleFormControlSelect1">Región</label>
+                    <select class="form-select" 
+                    formControlName="region_id"
+                    (change)="getComunas($event.target)">
+                    <option value="0">Seleccione Región</option>
+                    <option *ngFor="let item of regiones"
+                    [value]="item.region_id">{{item.nombre}}</option>
+                    </select>
+              </div>
+
+              <div class="form-group col-md-3 col-lg-3">
+                <label for="exampleFormControlSelect1">Comuna</label>
+                <select class="form-select" 
+                formControlName="comuna_id">
                 <option value="0">Seleccione Comuna</option>
-              </select>
+                <option *ngFor="let item of comunas" 
+                value="{{item.comuna_id}}">{{item.nombre}}</option>
+                </select>
+          </div>
+
+
+            <div class="form-group col-md-3 col-lg-3">
+              <label for="SelectFormConductor">Fono</label>
+              <input 
+                type="text" 
+                class="form-control" 
+                formControlName="contacto">
+            </div>
+
+
+            <div class="form-group col-md-3 col-lg-3">
+              <label for="SelectFormConductor">Email</label>
+              <input 
+                type="text" 
+                class="form-control" 
+                formControlName="mail">
             </div>
         
 
+
+          </div>
+
+          <div class="row">
+            
           <div class="form-group col-md-3 col-lg-3">
             <br>
           <button *ngIf="ocultarRegistro" type="submit" class="btn btn-success" >Guardar</button>
